{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 400,
  "lineage": "ebdf5be0-20bf-fea2-8f7b-afd0af3a4874",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "frontend_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "9080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-10-25T05:44:06.962-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-agi/global/firewalls/frontend",
            "log_config": [],
            "name": "frontend",
            "network": "https://www.googleapis.com/compute/v1/projects/project-agi/global/networks/default",
            "priority": 1000,
            "project": "project-agi",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-agi/global/firewalls/frontend",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "productpage"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "productpage_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-10-26T13:58:13.910-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-agi/global/firewalls/rule1",
            "log_config": [],
            "name": "rule1",
            "network": "https://www.googleapis.com/compute/v1/projects/project-agi/global/networks/default",
            "priority": 1000,
            "project": "project-agi",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-agi/global/firewalls/rule1",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "productpage"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "details"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "productpage_rules2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9080",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-03T09:59:14.026-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-agi/global/firewalls/rule2",
            "log_config": [],
            "name": "rule2",
            "network": "https://www.googleapis.com/compute/v1/projects/project-agi/global/networks/default",
            "priority": 1000,
            "project": "project-agi",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-agi/global/firewalls/rule2",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "productpage"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "reviews"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "reviews_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9080",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-04T04:06:05.796-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-agi/global/firewalls/stars",
            "log_config": [],
            "name": "stars",
            "network": "https://www.googleapis.com/compute/v1/projects/project-agi/global/networks/default",
            "priority": 1000,
            "project": "project-agi",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-agi/global/firewalls/stars",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "reviews"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "ratings"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "details",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-agi/zones/southamerica-east1-c/disks/details"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-agi/zones/southamerica-east1-c/instances/details",
            "instance_id": "5419106020327422283",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDYSvrUDeejchPHdbqNF7Enxu+72/MHRtlTdpX4Pe/YtXYIcDN/SCNEKFfDMFIlK0xvvqveybBe2E9ExXcGqVkAq9B6x8tE6jPJXTJ9gGYVbyRbbto9R8xW2yQ6yX7gUt+o9uGqWpPJZr5HCXw1Q9DnYmG2MX3UEEomPIDFYLImybAfmHku6G6Q5NgjDgpDRov1bwkoxBgo50u/cPM2Oe4NhZcpw7rucXGLc4Ar9Lor7r7Hd3IWrD83/kbDRyr7hF4EEOHi1fboFaK4+FOLFkvbfqVzH7G3a2QA9XYkgQx+osZ/RDdqDgEef4HFtp4rJtrSw1K5HRnoTHPBFRv4hp9uFm1YN6C37t7/ALsNAX3KyKtEIZ74VMU8AMEjoZjlLk7WGRNDrV8NRTj4aGBSOJ267CxUm24NvSAsYQXaY4nhWF [...]
            },
            "metadata_fingerprint": "vq0pcC9QcXk=",
            "name": "details",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.95.182.21",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-agi/global/networks/default",
                "network_ip": "10.158.0.16",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-agi/regions/southamerica-east1/subnetworks/default",
                "subnetwork_project": "project-agi"
              }
            ],
            "project": "project-agi",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-agi/zones/southamerica-east1-c/instances/details",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "details"
            ],
            "tags_fingerprint": "XVW4GDXn8_Q=",
            "zone": "southamerica-east1-c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "productpage",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-agi/zones/southamerica-east1-c/disks/productpage"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-agi/zones/southamerica-east1-c/instances/productpage",
            "instance_id": "3915826393955170636",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDYSvrUDeejchPHdbqNF7Enxu+72/MHRtlTdpX4Pe/YtXYIcDN/SCNEKFfDMFIlK0xvvqveybBe2E9ExXcGqVkAq9B6x8tE6jPJXTJ9gGYVbyRbbto9R8xW2yQ6yX7gUt+o9uGqWpPJZr5HCXw1Q9DnYmG2MX3UEEomPIDFYLImybAfmHku6G6Q5NgjDgpDRov1bwkoxBgo50u/cPM2Oe4NhZcpw7rucXGLc4Ar9Lor7r7Hd3IWrD83/kbDRyr7hF4EEOHi1fboFaK4+FOLFkvbfqVzH7G3a2QA9XYkgQx+osZ/RDdqDgEef4HFtp4rJtrSw1K5HRnoTHPBFRv4hp9uFm1YN6C37t7/ALsNAX3KyKtEIZ74VMU8AMEjoZjlLk7WGRNDrV8NRTj4aGBSOJ267CxUm24NvSAsYQXaY4nhWF [...]
            },
            "metadata_fingerprint": "vq0pcC9QcXk=",
            "name": "productpage",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.95.250.84",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-agi/global/networks/default",
                "network_ip": "10.158.0.13",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-agi/regions/southamerica-east1/subnetworks/default",
                "subnetwork_project": "project-agi"
              }
            ],
            "project": "project-agi",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-agi/zones/southamerica-east1-c/instances/productpage",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "productpage"
            ],
            "tags_fingerprint": "Yjf4Umj8_5Y=",
            "zone": "southamerica-east1-c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ratings",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-agi/zones/southamerica-east1-c/disks/ratings"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-agi/zones/southamerica-east1-c/instances/ratings",
            "instance_id": "7354853441401518411",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDYSvrUDeejchPHdbqNF7Enxu+72/MHRtlTdpX4Pe/YtXYIcDN/SCNEKFfDMFIlK0xvvqveybBe2E9ExXcGqVkAq9B6x8tE6jPJXTJ9gGYVbyRbbto9R8xW2yQ6yX7gUt+o9uGqWpPJZr5HCXw1Q9DnYmG2MX3UEEomPIDFYLImybAfmHku6G6Q5NgjDgpDRov1bwkoxBgo50u/cPM2Oe4NhZcpw7rucXGLc4Ar9Lor7r7Hd3IWrD83/kbDRyr7hF4EEOHi1fboFaK4+FOLFkvbfqVzH7G3a2QA9XYkgQx+osZ/RDdqDgEef4HFtp4rJtrSw1K5HRnoTHPBFRv4hp9uFm1YN6C37t7/ALsNAX3KyKtEIZ74VMU8AMEjoZjlLk7WGRNDrV8NRTj4aGBSOJ267CxUm24NvSAsYQXaY4nhWF [...]
            },
            "metadata_fingerprint": "vq0pcC9QcXk=",
            "name": "ratings",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.247.235.174",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-agi/global/networks/default",
                "network_ip": "10.158.0.14",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-agi/regions/southamerica-east1/subnetworks/default",
                "subnetwork_project": "project-agi"
              }
            ],
            "project": "project-agi",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-agi/zones/southamerica-east1-c/instances/ratings",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ratings"
            ],
            "tags_fingerprint": "jYtgYZW12Qc=",
            "zone": "southamerica-east1-c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "reviews",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-agi/zones/southamerica-east1-c/disks/reviews"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-agi/zones/southamerica-east1-c/instances/reviews",
            "instance_id": "6843405480208628043",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDYSvrUDeejchPHdbqNF7Enxu+72/MHRtlTdpX4Pe/YtXYIcDN/SCNEKFfDMFIlK0xvvqveybBe2E9ExXcGqVkAq9B6x8tE6jPJXTJ9gGYVbyRbbto9R8xW2yQ6yX7gUt+o9uGqWpPJZr5HCXw1Q9DnYmG2MX3UEEomPIDFYLImybAfmHku6G6Q5NgjDgpDRov1bwkoxBgo50u/cPM2Oe4NhZcpw7rucXGLc4Ar9Lor7r7Hd3IWrD83/kbDRyr7hF4EEOHi1fboFaK4+FOLFkvbfqVzH7G3a2QA9XYkgQx+osZ/RDdqDgEef4HFtp4rJtrSw1K5HRnoTHPBFRv4hp9uFm1YN6C37t7/ALsNAX3KyKtEIZ74VMU8AMEjoZjlLk7WGRNDrV8NRTj4aGBSOJ267CxUm24NvSAsYQXaY4nhWF [...]
            },
            "metadata_fingerprint": "vq0pcC9QcXk=",
            "name": "reviews",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.95.224.97",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-agi/global/networks/default",
                "network_ip": "10.158.0.15",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-agi/regions/southamerica-east1/subnetworks/default",
                "subnetwork_project": "project-agi"
              }
            ],
            "project": "project-agi",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-agi/zones/southamerica-east1-c/instances/reviews",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reviews"
            ],
            "tags_fingerprint": "SY3OzQ8V4JA=",
            "zone": "southamerica-east1-c"
          }
        }
      ]
    }
  ]
}